fixed home page margins, spacings and images

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,57 +1,64 @@
 @import "../../variables";
 
 .about {
-    opacity: 0.9;
-    background-color: $gray-color;
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        text-align: center;
-        align-items: center;
+  opacity: 0.9;
+  background-color: $gray-color;
+  .about_container {
+    padding: 0 5rem;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    align-items: center;
 
-        .about_content {
-            p {
-                font-size: clamp(14px, 2.5vw, 22px);
-                font-weight: 100;
-                letter-spacing: 1.69px;
-                text-align: justify;
-            }
+    .about_content {
+      .title {
+        margin-bottom: 20px;
+      }
 
-            &-buttons {
-                display: flex;
-                gap: 1rem;
-                .btn {
-                    padding: 0.5rem 0.75rem;
-                    background: none;
-                    border-radius: 9.6px;
-                    border: solid 0.6px black;
+      p {
+        font-size: clamp(14px, 2.5vw, 22px);
+        font-weight: 100;
+        letter-spacing: 1.69px;
+        text-align: justify;
+      }
 
-                    display: flex;
-                    align-items: center;
-                    gap: 1rem;
+      &-buttons {
+        display: flex;
+        gap: 1rem;
+        .btn {
+          padding: 0.5rem 0.75rem;
+          background: none;
+          border-radius: 9.6px;
+          border: solid 0.6px black;
 
-                    p {
-                        text-align: center;
-                        font-size: clamp(9px, 2.5vw, 13px);
-                        margin: 0;
-                    }
+          display: flex;
+          align-items: center;
+          gap: 1rem;
 
-                    span {
-                        text-align: center;
-                        font-size: clamp(14px, 2.5vw, 18px);
-                        font-weight: bold;
-                    }
-                }
-            }
+          p {
+            text-align: center;
+            font-size: clamp(9px, 2.5vw, 13px);
+            margin: 0;
+          }
+
+          span {
+            text-align: center;
+            font-size: clamp(14px, 2.5vw, 18px);
+            font-weight: bold;
+          }
         }
-
-        @media screen and (max-width: 992px) {
-            grid-template-columns: repeat(1, 1fr);
-
-            .about_content-buttons {
-                margin-top: 3rem;
-                justify-content: center;
-            }
-        }
+      }
     }
+
+    @media screen and (max-width: 992px) {
+      grid-template-columns: repeat(1, 1fr);
+
+      .about_content-buttons {
+        margin-top: 3rem;
+        justify-content: center;
+      }
+    }
+  }
 }
