--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,58 +1,76 @@
 @import "../../variables";
 
 .card {
-    max-width: 360px;
-    background: $card-bg-color;
-    text-align: center;
+  display: grid;
+  grid-template-rows: max-content;
+  max-width: 360px;
+  background: $card-bg-color;
+  text-align: center;
 
-    &_img {
-        object-fit: contain;
-        img {
-            width: 100%;
-        }
+  &_img {
+    object-fit: contain;
+    img {
+      width: 100%;
+    }
+  }
+
+  &_content {
+    padding: 0 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &-text {
+      h3 {
+        margin: 1rem auto 1rem auto;
+      }
+
+      p {
+        font-size: 24px;
+        font-weight: 100;
+        line-height: 1.2;
+        letter-spacing: 1.6px;
+      }
     }
 
-    .card_text {
-        padding: 1rem 0;
-        h3 {
-            margin-top: 1.5rem;
-            font-size: inherit;
-            letter-spacing: 2.67px;
-        }
-
-        p {
-            font-weight: 100;
-            letter-spacing: 1.67px;
-        }
-    }
-
-    .card_icon {
+    &-dish {
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      .card_icon {
         width: 30px;
         height: 30px;
         margin: 1rem auto 1rem;
 
         img {
-            width: 100%;
-            height: 100%;
+          display: block;
+          width: 100%;
+          object-fit: cover;
         }
+      }
     }
 
-    .card_dish {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-        margin-bottom: 1rem;
+    &-price {
+      display: grid;
+      grid-template-columns: auto auto auto;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      margin-bottom: 1rem;
 
-        .line {
-            width: clamp(55px, 9vw, 112px);
-            height: 1px;
-            background: $card-line-bg-color;
-        }
+      .line {
+        width: clamp(55px, 9vw, 100px);
+        height: 1px;
+        background: $card-line-bg-color;
+      }
+      p {
+        margin: 0;
 
-        p {
-            margin: 0;
+        span {
+          font-size: clamp(14.3px, 2.5vw, 20px);
         }
+      }
     }
+  }
 }
